Move Objects to force-app\main\default folder

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -12,7 +12,8 @@
     ],
     "settings": {
         "orgPreferenceSettings": {
-            "networksEnabled": true
+            "networksEnabled": true,
+            "translation": true
         }
     },
     "orgPreferences": {
