--- a/ant/build.properties
+++ b/ant/build.properties
@@ -1,13 +1,13 @@
 # build.properties
 
 sf.username = lb@hps.ph.int
-sf.password = XXXXXXX
+sf.password = qazwsxedc123
 
 # Orgs params
 sf.serverurl = https://test.salesforce.com
 sf.maxPoll = 20
 sf.ant.lib = lib/ant-salesforce.jar
-deploy.dir = ant_out_tmp
+deploy.dir = ../output
 
 
 
