Update deployment process
Add PSE Status Tracking and And PSE Card on home page

--- a/ant/build.properties
+++ b/ant/build.properties
@@ -1,13 +1,22 @@
 # build.properties
 
-sf.username = lb@hps.ph.int
-sf.password = qazwsxedc123
+#Integration instance:
+sf.int.username = lb@hps.ph.int
+sf.int.password = qazwsxedc123
 
-# Orgs params
+#Informal instance:
+sf.inf.username = lb@hps.ph.inf
+sf.inf.password = qazwsxedc123
+
+# Orgs params:
 sf.serverurl = https://test.salesforce.com
 sf.maxPoll = 20
-sf.ant.lib = lib/ant-salesforce.jar
-deploy.dir = ../output
+sf.maxPollWaitTimeMs = 50000
+
+# Other:
+ant.salesforce.lib = lib/ant-salesforce.jar
+ant.xmltask.lib = lib/xmltask.jar
+source.dir = ../output
 
 
 
