--- a/ant/build.xml
+++ b/ant/build.xml
@@ -1,45 +1,96 @@
-<project name="Sample usage of Salesforce Ant tasks" default="test" basedir="." xmlns:sf="antlib:com.salesforce">
+<!-- Author leonid Bartenev -->
+<project name="Deployment script" basedir="." xmlns:sf="antlib:com.salesforce">
 
     <property file="build.properties"/>
     <property environment="env"/>
 
-    <!-- Setting default value for username, password and session id properties to empty string 
-         so unset values are treated as empty. Without this, ant expressions such as ${sf.username}
-         will be treated literally.
-    -->
-    <condition property="sf.username" value="">
-        <not>
-            <isset property="sf.username"/>
-        </not>
-    </condition>
-    <condition property="sf.password" value="">
-        <not>
-            <isset property="sf.password"/>
-        </not>
-    </condition>
-    <condition property="sf.sessionId" value="">
-        <not>
-            <isset property="sf.sessionId"/>
-        </not>
-    </condition>
-
     <taskdef resource="com/salesforce/antlib.xml" uri="antlib:com.salesforce">
         <classpath>
-            <pathelement location="${sf.ant.lib}"/>
+            <pathelement location="${ant.salesforce.lib}"/>
         </classpath>
     </taskdef>
 
+    <taskdef name="xmltask" classname="com.oopsconsultancy.xmltask.ant.XmlTask">
+        <classpath>
+            <pathelement location="${ant.xmltask.lib}"/>
+        </classpath>
+    </taskdef>
 
     <!-- targets: -->
 
-    <target name="deploy-code">
-        <sf:deploy username="${sf.username}"
-                   password="${sf.password}"
+    <target name="deploy-int" depends="prepare-metadata">
+        <sf:deploy username="${sf.int.username}"
+                   password="${sf.int.password}"
                    serverurl="${sf.serverurl}"
                    maxPoll="${sf.maxPoll}"
-                   deployRoot="${deploy.dir}"
+                   deployRoot="${source.dir}"
+                   pollwaitmillis="${sf.maxPollWaitTimeMs}"
                    rollbackOnError="true">
         </sf:deploy>
+    </target>
+
+    <target name="validate-int" depends="prepare-metadata">
+        <sf:deploy username="${sf.int.username}"
+                   password="${sf.int.password}"
+                   serverurl="${sf.serverurl}"
+                   maxPoll="${sf.maxPoll}"
+                   deployRoot="${source.dir}"
+                   pollwaitmillis="${sf.maxPollWaitTimeMs}"
+                   rollbackOnError="true" checkonly="true">
+        </sf:deploy>
+    </target>
+
+    <target name="deploy-inf" depends="prepare-metadata">
+        <sf:deploy username="${sf.inf.username}"
+                   password="${sf.inf.password}"
+                   serverurl="${sf.serverurl}"
+                   maxPoll="${sf.maxPoll}"
+                   deployRoot="${source.dir}"
+                   pollwaitmillis="${sf.maxPollWaitTimeMs}"
+                   rollbackOnError="true">
+        </sf:deploy>
+    </target>
+
+    <target name="validate-inf" depends="prepare-metadata">
+        <sf:deploy username="${sf.inf.username}"
+                   password="${sf.inf.password}"
+                   serverurl="${sf.serverurl}"
+                   maxPoll="${sf.maxPoll}"
+                   deployRoot="${source.dir}"
+                   pollwaitmillis="${sf.maxPollWaitTimeMs}"
+                   rollbackOnError="true" checkonly="true">
+        </sf:deploy>
+    </target>
+
+    <!-- filter metadata files before deploy: -->
+    <target name="prepare-metadata" depends="convert-project">
+        <echo message="Filter profiles..." level="info"/>
+        <xmltask todir="${source.dir}/profiles">
+            <fileset dir="${source.dir}/profiles"/>
+            <remove path="/:Profile/:userPermissions[:name[text()='EnableCommunityAppLauncher']]"/>
+            <remove path="/:Profile/:userPermissions[:name[text()='FieldServiceAccess']]"/>
+            <remove path="/:Profile/:userPermissions[:name[text()='SendExternalEmailAvailable']]"/>
+            <remove path="/:Profile/:applicationVisibilities[:application[text()='Developer']]"/>
+        </xmltask>
+        <!-- temporary fix for deployment of Contact (remove Master record type from metadata): -->
+        <echo message="Remove Contact.MASTER record type from metadata" level="warn"/>
+        <xmltask source="${source.dir}/objects/Contact.object" dest="${source.dir}/objects/Contact.object">
+            <remove path="/:CustomObject/:recordTypes[:fullName[text()='MASTER']]"/>
+        </xmltask>
+        <xmltask source="${source.dir}/package.xml" dest="${source.dir}/package.xml">
+            <remove path="/:Package/:types/:members[text()='Contact.MASTER']"/>
+        </xmltask>
+    </target>
+
+    <target name="convert-project">
+        <delete dir="${source.dir}"/>
+        <exec dir=".." executable="cmd" osfamily="windows">
+            <arg value="/c convert-project.bat"/>
+        </exec>
+        <!-- TODO test for mac -->
+        <exec dir=".." executable="/bin/sh" osfamily="mac">
+            <arg path="-c convert-project.bat"/>
+        </exec>
     </target>
 
 </project>
