Update profiles after merge

--- a/ant/build.properties
+++ b/ant/build.properties
@@ -17,6 +17,8 @@ sf.maxPollWaitTimeMs = 50000
 ant.salesforce.lib = lib/ant-salesforce.jar
 ant.xmltask.lib = lib/xmltask.jar
 source.dir = ../output
+dx.default.dir = ../force-app/main/default
+dx.unpackaged.dir = ../unpackaged/main/default
 
 
 
