--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -8,7 +8,8 @@
         "SiteForceContributor",
         "Sites",
         "StateAndCountryPicklist",
-        "Workflow"
+        "Workflow",
+        "DefaultWorkflowUser"
     ],
     "settings": {
         "orgPreferenceSettings": {
