--- a/ant/build.properties
+++ b/ant/build.properties
@@ -16,6 +16,7 @@ sf.maxPollWaitTimeMs = 50000
 # Other:
 ant.salesforce.lib = lib/ant-salesforce.jar
 ant.xmltask.lib = lib/xmltask.jar
+retrieve.dir = retrieve
 source.dir = ../output
 dx.default.dir = ../force-app/main/default
 dx.unpackaged.dir = ../unpackaged/main/default
