--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ validateINT:
   - node convert.js
   - cd ..
   - sfdx force:source:convert -d output
-  - sfdx force:mdapi:deploy -d output -u devhub -c -w 60
+  #- sfdx force:mdapi:deploy -d output -u devhub -c -w 60
 
 deployINT:
   tags:
@@ -52,7 +52,7 @@ deployINT:
   - node convert.js
   - cd ..
   - sfdx force:source:convert -d output
-  - sfdx force:mdapi:deploy -d output -u devhub  -w 60
+  #- sfdx force:mdapi:deploy -d output -u devhub  -w 60
   - echo "deploy Int success"
 
 validateScratchKiev:
