delete scratch org validate

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ validateINT:
   - node convert.js
   - cd ..
   - sfdx force:source:convert -d output
-  #- sfdx force:mdapi:deploy -d output -u devhub -c -w 60
+  - sfdx force:mdapi:deploy -d output -u devhub -c -w 60
 
 deployINT:
   tags:
@@ -50,24 +50,24 @@ deployINT:
   - node convert.js
   - cd ..
   - sfdx force:source:convert -d output
-  #- sfdx force:mdapi:deploy -d output -u devhub  -w 60
+  - sfdx force:mdapi:deploy -d output -u devhub  -w 60
   - echo "deploy Int success"
 
-validateScratchKiev:
-  tags:
-  - shell
-  only:
-  - PH_R1_Sprint5_K
-  - merge_requests
+  #validateScratchKiev:
+  #tags:
+  #- shell
+  #only:
+  #- PH_R1_Sprint5_K
+  #- merge_requests
 
-  stage: validateScratchKiev
-  script:
-  - echo "$PH_R1_SPRINT_K_AUTH" > sfdx-auth-url
-  - sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a devhubK -d
-  - echo "login dev hub successfully"
-  - sfdx --version
+  #stage: validateScratchKiev
+  #script:
+  #- echo "$PH_R1_SPRINT_K_AUTH" > sfdx-auth-url
+  #- sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a devhubK -d
+  #- echo "login dev hub successfully"
+  #- sfdx --version
   #- sfdx force:source:push -u scratch -f
-  - echo "validate scratch success"
+  #- echo "validate scratch success"
 
 #validateScratchMoscow:
  # tags:
