--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,8 @@ stages:
 - validateINT
 - validateScratchKiev
 - validateScratchMoscow
+- calidateINF
+- deployINF
 
 cache:
   paths:
@@ -30,7 +32,8 @@ validateINT:
   - node convert.js
   - cd ..
   - sfdx force:source:convert -d output
-  - sfdx force:mdapi:deploy -d output -u devhub -c -w 60
+  - sfdx force:mdapi:deploy -d output -u INT -c -w 60
+  - echo "validate Int success"
 
 deployINT:
   tags:
@@ -50,8 +53,52 @@ deployINT:
   - node convert.js
   - cd ..
   - sfdx force:source:convert -d output
-  - sfdx force:mdapi:deploy -d output -u devhub  -w 60
+  - sfdx force:mdapi:deploy -d output -u INT  -w 60
   - echo "deploy Int success"
+
+ValidateINF:
+  tags:
+  - shell
+  only:
+  - master
+  - merge_requests
+  except:
+  - push
+  - commit
+
+  stage: validateINF
+  script:
+  - echo "SFDX_AUTH_URL_INF > sfdx-auth-url
+  - sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a INF -d
+  - echo "test1"
+  - sfdx --version
+  - cd Nodejs
+  - node convert.js
+  - cd ..
+  - sfdx force:source:convert -d output
+  - sfdx force:mdapi:deploy -d output -u INF -c -w 60
+  - echo "validate Inf success"
+
+DeployINF:
+  tags:
+  - shell
+  only:
+  - master
+  except:
+  - merge_requests
+
+  stage: deployINF
+  script:
+  - echo "$SFDX_AUTH_URL_INF" > sfdx-auth-url
+  - sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a devhub -d
+  - echo "test1"
+  - sfdx --version
+  - cd Nodejs
+  - node convert.js
+  - cd ..
+  - sfdx force:source:convert -d output
+  - sfdx force:mdapi:deploy -d output -u INF  -w 60
+  - echo "deploy Inf success"
 
   #validateScratchKiev:
   #tags:
