--- a/ant/build.properties
+++ b/ant/build.properties
@@ -20,6 +20,7 @@ retrieve.dir = retrieve
 source.dir = ../output
 dx.default.dir = ../force-app/main/default
 dx.unpackaged.dir = ../unpackaged/main/default
+dist.dir = dist
 
 
 
