--- a/ant/build.properties
+++ b/ant/build.properties
@@ -8,6 +8,11 @@ sf.int.password = qazwsxedc123
 sf.inf.username = lb@hps.ph.inf
 sf.inf.password = qazwsxedc123
 
+#Rollback Source Org:
+sf.rollback.username = lb@rh.hpsdevv3
+sf.rollback.password = Samokat26
+
+
 # Orgs params:
 sf.serverurl = https://test.salesforce.com
 sf.maxPoll = 20
@@ -21,6 +26,8 @@ source.dir = ../output
 dx.default.dir = ../force-app/main/default
 dx.unpackaged.dir = ../unpackaged/main/default
 dist.dir = dist
+rollback.dir = rollback
+rollback.source.dir = rollback/source
 
 
 
