--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ output
 tmp
 ant/dist
 ant/rollback
+force-app/main/default/siteDotComSites/IQVIA_Referral_Hub_C.site
+force-app/main/default/siteDotComSites/IQVIA_Referral_Hub_C.site
