--- a/ant/build.xml
+++ b/ant/build.xml
@@ -195,6 +195,11 @@
             <replacetoken><![CDATA[<senderType>OrgWideEmailAddress</senderType>]]></replacetoken>
             <replacevalue><![CDATA[<senderType>CurrentUser</senderType>]]></replacevalue>
         </replace>
+        <replace casesensitive="false"
+                 file="${dx.default.dir}/workflows/Participant_Study_Enrollment__c.workflow-meta.xml">
+            <replacetoken><![CDATA[<senderType>OrgWideEmailAddress</senderType>]]></replacetoken>
+            <replacevalue><![CDATA[<senderType>CurrentUser</senderType>]]></replacevalue>
+        </replace>
         <echo message="replace completed" level="info"/>
     </target>
 
