Created git-report tool

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ ant/dist
 ant/rollback
 force-app/main/default/siteDotComSites/IQVIA_Referral_Hub_C.site
 force-app/main/default/siteDotComSites/IQVIA_Referral_Hub_C.site
+git-report/Reports
