change CI tweak to DryRun

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,12 +5,58 @@ stages:
 - deployINF
 - runTestINF
 - runTestINT
-
+- VALIDATE_DRYRUN
+- DEPOLOY_DRYRUN
 cache:
   paths:
   - node_modules
   - ~/.sfdx
   - .sfdx
+VALIDATE_DRYRUN:
+  tags:
+  - shell_2
+  only:
+  - PH_R1_Sprint
+  - Sprint
+  - merge_requests
+  except:
+  - push
+  - commit
+
+  stage: VALIDATE_DRYRUN
+  script:
+  - echo "$SFDX_AUTH_URL_DRY_RUN" > sfdx-auth-url
+  - sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a DRYRUN -d
+  - sfdx --version
+  - cd Nodejs
+  - node convert.js
+  - cd ..
+  - rm -rf output
+  - sfdx force:source:convert -d output
+  - sfdx force:mdapi:deploy -d output -u DRYRUN -c --testlevel=RunLocalTests -w 60
+  - echo "validate Int success"
+
+DEPOLOY_DRYRUN:
+  tags:
+  - shell_2
+  only:
+  - PH_R1_Sprint
+  - Sprint
+  except:
+  - merge_requests
+
+  stage: DEPOLOY_DRYRUN
+  script:
+  - echo "$SFDX_AUTH_URL_DRY_RUN" > sfdx-auth-url
+  - sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a DRYRUN -d
+  - sfdx --version
+  - cd Nodejs
+  - node convert.js
+  - cd ..
+  - rm -rf output
+  - sfdx force:source:convert -d output
+  - sfdx force:mdapi:deploy -d output -u DRYRUN  -w 60
+  - echo "validate Int success"
 
 validateINT:
   tags:
