--- a/ant/build.properties
+++ b/ant/build.properties
@@ -2,7 +2,7 @@
 
 #Integration instance:
 sf.int.username = lb@hps.ph.int
-sf.int.password = qazwsxedc123
+sf.int.password = Its2smart4u
 
 #Informal instance:
 sf.inf.username = lb@hps.ph.inf
