Scratch deployment fixes

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,5 +1,5 @@
 {
-    "orgName": "PH1Org",
+    "orgName": "ScratchOrg",
     "edition": "Developer",
     "language": "en_US",
     "features": [
@@ -7,7 +7,7 @@
         "SiteDotCom",
         "SiteForceContributor",
         "Sites",
-        "StateAndCountryPicklist",
+        "SurveyCreatorUser",
         "Workflow",
         "DefaultWorkflowUser"
     ],
@@ -16,9 +16,5 @@
             "networksEnabled": true,
             "translation": true
         }
-    },
-    "orgPreferences": {
-        "enabled": [],
-        "disabled": []
     }
 }
