--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,29 +12,29 @@ cache:
   - node_modules
   - ~/.sfdx
   - .sfdx
-VALIDATE_DRYRUN:
-  tags:
-  - shell_2
-  only:
-  - PH_R1_Sprint
-  - Sprint
-  - merge_requests
-  except:
-  - push
-  - commit
+# VALIDATE_DRYRUN:
+  #tags:
+  #- shell_2
+  #only:
+  #- PH_R1_Sprint
+  #- Sprint
+  #- merge_requests
+  #except:
+  #- push
+  #- commit
 
-  stage: VALIDATE
-  script:
-  - echo "$SFDX_AUTH_URL_DRY_RUN" > sfdx-auth-url
-  - sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a DRYRUN -d
-  - sfdx --version
-  - cd Nodejs
-  - node convert.js
-  - cd ..
-  - rm -rf output
-  - sfdx force:source:convert -d output
-  - sfdx force:mdapi:deploy -d output -u DRYRUN -c --testlevel=RunLocalTests -w 60
-  - echo "validate Int success"
+ # stage: VALIDATE
+  #script:
+  #- echo "$SFDX_AUTH_URL_DRY_RUN" > sfdx-auth-url
+  #- sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a DRYRUN -d
+ # - sfdx --version
+  #- cd Nodejs
+ # - node convert.js
+ # - cd ..
+ # - rm -rf output
+ # - sfdx force:source:convert -d output
+  #- sfdx force:mdapi:deploy -d output -u DRYRUN -c --testlevel=RunLocalTests -w 60
+  #- echo "validate Int success"
 
 VALIDATE_INF:
   tags:
@@ -61,7 +61,7 @@ VALIDATE_INF:
 
 VALIDATE_INT:
   tags:
-  - shell
+  - shell_2
   only:
   - merge_requests
   except:
