--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ ant/rollback
 force-app/main/default/siteDotComSites/IQVIA_Referral_Hub_C.site
 force-app/main/default/siteDotComSites/IQVIA_Referral_Hub_C.site
 git-report/Reports
+force-app/main/default/email/unfiled$public
