--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -3,6 +3,7 @@
     "edition": "Developer",
     "language": "en_US",
     "features": [
+        "ContactsToMultipleAccounts",
         "Communities",
         "SiteDotCom",
         "SiteForceContributor",
