--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -4,6 +4,7 @@
     "language": "en_US",
     "features": [
         "Communities",
+        "ContactsToMultipleAccounts",
         "SiteDotCom",
         "SiteForceContributor",
         "Sites",
