--- a/.forceignore
+++ b/.forceignore
@@ -14,6 +14,7 @@ force-app/main/default/settings/Address.settings-meta.xml
 force-app/main/default/profiles/Custom%3A Marketing Profile.profile-meta.xml
 force-app/main/default/profiles/Custom%3A Sales Profile.profile-meta.xml
 force-app/main/default/profiles/Custom%3A Support Profile.profile-meta.xml
+force-app/main/default/profiles/IQVIA RH Profile.profile-meta.xml
 
 #community:
 #unpackaged/main/default/experiences
